// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object freezes 1`] = `[TypeError: Cannot assign to read only property 'a' of object '#<Object>']`;

exports[`Object merges deep 1`] = `
{
  "address": {
    "city": "Mountain View",
    "country": "US",
  },
  "age": "15",
  "name": "Someone",
  "profile": {
    "username": "someone",
  },
}
`;

exports[`Object merges deep with freezed object 1`] = `
{
  "address": {
    "city": "Mountain View",
    "country": "US",
  },
  "age": "15",
  "name": "someone else",
  "profile": {
    "username": "someone",
  },
}
`;
